--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-archivesBaseName = "scrabbleScore"
+archivesBaseName = "ScrabbleScore"
 version = '1.0'
-mainClassName = "scrabbleScore"
+mainClassName = "ScrabbleScore"
 
 repositories {
     mavenCentral()
@@ -11,4 +11,7 @@ repositories {
 
 dependencies {
 testCompile group: 'junit', name: 'junit', version: '4.+'
+compile group: 'com.sparkjava', name: 'spark-core', version: '2.1'
+compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
+
 }
